test/traceback-1.txt
Traceback (most recent call last):
  File "/Users/hanjingbo/anaconda2/lib/python2.7/site-packages/pudb/__init__.py", line 77, in runscript
    dbg._runscript(mainpyfile)
  File "/Users/hanjingbo/anaconda2/lib/python2.7/site-packages/pudb/debugger.py", line 419, in _runscript
    self.run(statement, globals=globals_, locals=locals_)
  File "/Users/hanjingbo/anaconda2/lib/python2.7/bdb.py", line 400, in run
    exec cmd in globals, locals
  File "<string>", line 1, in <module>
  File "clean.py", line 12
    l = line.replace("\t"," ").replace("，"," ").replace("；"," ").replace("。"," ").replace("\n"," ").replace(u'\u3000'," ").replace(u'\u2028'," ")split(" ")
                                                                                                                                                           ^
SyntaxError: invalid syntax
